--- a/jesse.css
+++ b/jesse.css
@@ -131,3 +131,63 @@ table {
 	background-color: yellow;
 	color: white;
 }
+.recent-projects{
+	padding: 50px 0;
+	overflow: auto;
+}
+.projects {
+	background-color: gray;
+	height: 200px;
+	outline: solid 1px red;
+	width: 33.333333%;
+
+	float: left;
+
+}
+
+.projects-row {
+	margin: 0 auto;
+	 width: 90%;
+}
+
+.story {
+	background-color: rgb(100, 107, 111);
+	height: 500px;
+	padding: 50px;
+}
+.story-details {
+	border: solid 1px yellow;
+	height: 400px;
+	width: 50%;
+}
+
+.what-i-do {
+	width: 90%;
+	margin: 0 auto;
+	overflow: auto;
+
+}
+
+.particular-thing {
+	width: 25%;
+	outline: solid 1px red;
+	float: left;
+	background-color: pink;
+	height: 200px;
+}
+.footer {
+	margin: 0 auto;
+	overflow: auto;
+	width: 90%;
+
+}
+.circle {
+	float: left;
+	background-color: red;
+	height: 100px;
+	width: 25%;
+	border-radius: 50%;
+	margin:
+
+
+}
